deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service:  goshare-backend
  name:  goshare-backend
spec:
  selector:
    matchLabels:
      app: goshare
      service:  goshare-backend
  template:
    metadata:
      labels:
        app: goshare
        service:  goshare-backend
    spec:
      containers:
        - image: git.haw-hamburg.de:5005/acq573/se2_magic_team:backend
          name:  goshare-backend
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: se2deploysecret
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: goshare-backend
  name: goshare-backend
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: goshare
    service:  goshare-backend
  type: ClusterIP
