ingress_backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  name: se2-goshare-backend-ingress
  namespace: acq573-se2-magic-team
spec:
  tls:
  - hosts:
    - goshare-api.informatik.haw-hamburg.de
    secretName: se2-goshare-backend-secret
  rules:
  - host: goshare-api.informatik.haw-hamburg.de
    http:
      paths:
      - path: /
        backend:
            serviceName: goshare-backend
            servicePort: 8080
