ingress_frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  name: se2-goshare-frontennd-ingress
  namespace: acq573-se2-magic-team
spec:
  tls:
  - hosts:
    - goshare.informatik.haw-hamburg.de
    secretName: se2-goshare-frontend-secret
  rules:
  - host: goshare.informatik.haw-hamburg.de
    http:
      paths:
      - path: /
        backend:
            serviceName: goshare-frontend
            servicePort: 80
